Some updates related to libraries